# workBD5

./: .env  .gitignore  employers_config.json  main.py  pyproject.toml
course_work5/: config.py  user_interaction.py
course_work5/api_clients/: base.py  entities.py  hh_client.py
course_work5/cli/: init_db.py  search_employers.py
course_work5/db/: loader.py  migrations.py
course_work5/db/managers/: base.py  pg_db_manager.py
course_work5/migrations/: 001_create_employers_table.sql  002_create_vacancies_table.sql
